docs: clarify optional JDK 25 module opening